fix: PMD issues